add_library(app src/app.cpp)

target_include_directories(app PUBLIC include)
target_link_libraries(app feedView)
target_link_libraries(app loginView)
target_link_libraries(app userView)
target_link_libraries(app postView)
target_link_libraries(app newPostView)
target_link_libraries(app store)
target_link_libraries(app model)